[package]
name = "dbflux_storage"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core.workspace = true
dirs.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true

# For timestamp formatting in state repositories (without pulling full chrono from workspace)
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
