[package]
name = "dbflux_test_support"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core.workspace = true
dbflux_ipc.workspace = true
dbflux_driver_redis.workspace = true
serde_json.workspace = true
testcontainers = "0.15"
interprocess.workspace = true
