[package]
name = "dbflux_test_support"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbflux_core.workspace = true
dbflux_ipc.workspace = true
dbflux_driver_cloudwatch.workspace = true
dbflux_driver_dynamodb.workspace = true
dbflux_driver_influxdb.workspace = true
dbflux_driver_mongodb.workspace = true
dbflux_driver_mssql.workspace = true
dbflux_driver_mysql.workspace = true
dbflux_driver_postgres.workspace = true
dbflux_driver_redis.workspace = true
dbflux_driver_sqlite.workspace = true
serde_json.workspace = true
testcontainers = "0.15"
interprocess.workspace = true
reqwest = { workspace = true, default-features = false, features = ["blocking", "rustls-tls"] }
